# befunge2

./: .gitignore  README.md  befunge.py  befunge_graph.html  environment.yml  experiments.txt  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  test.yml
befunge2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bench/: interface.py  run_bench.py  verify.py
bench/runners/: befunge.py  python.py
checkpoints/: transformer_3.pt  transformer_5_rlwarm.pt
examples/: count.bf  factorials.bf  fib.bf  primes.bf
models/cnn/: attention.py  demo.ipynb  grid.py  model.py  observation_tokenization.py  rollout.py  stepper.py  tokenization.py  train.py  vocab.py
models/common/: curriculum.py  random_worlds.py  rollout.py  stepper.py  tokenization.py  train.py
models/transformer/: frame.py  model.py
programs/transformer/: index.txt  transformer_3_ex0.bf  transformer_3_ex1.bf  transformer_3_ex10.bf  transformer_3_ex11.bf  transformer_3_ex12.bf  transformer_3_ex13.bf  transformer_3_ex14.bf  transformer_3_ex15.bf  transformer_3_ex16.bf  transformer_3_ex17.bf  transformer_3_ex18.bf  transformer_3_ex19.bf  transformer_3_ex2.bf  transformer_3_ex20.bf  transformer_3_ex21.bf  (+21 more)
scripts/: train_geom_sft.py  train_rl_from_geom.py  train_stream.py  train_transformer_3.py  train_transformer_5_rlwarm.py  train_transformer_8_rlextra.py
tests/: test_batched.py  test_frame.py  test_grid.py  test_observation_tokenization.py  test_random_worlds.py  test_runnable.py  test_stepper.py  test_tokenization.py  test_transformer.py  test_verify.py
viz/: graph.py  graph_template.html  gui.py
